--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.13.0",
     "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
